Refactoring #2: ViewModel 추가

--- a/IoraWallPaper/Resource/Base.lproj/Main.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/Main.storyboard
@@ -811,7 +811,7 @@ Check your connection</string>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="dhe-y0-aBO"/>
+        <segue reference="9Ng-Na-zMd"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="ColorPalette" width="375" height="812"/>
