데이터 모델 변경 및 태그 설명 표시

--- a/IoraWallPaper/Resource/Base.lproj/LaunchScreen.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="aBQ-aV-Dff">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading" translatesAutoresizingMaskIntoConstraints="NO" id="aBQ-aV-Dff">
                                 <rect key="frame" x="144.5" y="385.5" width="125" height="125"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -25,7 +25,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="aBQ-aV-Dff" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="NSa-Ep-mmO"/>
                             <constraint firstItem="aBQ-aV-Dff" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="lGH-Xx-uKs"/>
@@ -39,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="416.66665649414062" height="416.66665649414062"/>
+        <image name="loading" width="113.33333587646484" height="113.33333587646484"/>
     </resources>
 </document>
