--- a/IoraWallPaper/Resource/Base.lproj/Main.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fZd-Bb-I4I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZDA-Kv-UAi">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -82,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wsJ-VJ-HAF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="335" y="-536"/>
+            <point key="canvasLocation" x="335" y="819"/>
         </scene>
         <!--SearchViewController-->
         <scene sceneID="AUi-M6-tbw">
@@ -101,9 +101,6 @@
                                             <constraint firstAttribute="width" constant="35" id="odr-Tf-zr0"/>
                                         </constraints>
                                         <state key="normal" image="search_back"/>
-                                        <connections>
-                                            <action selector="popAction:" destination="klj-nG-AVz" eventType="touchUpInside" id="Upb-0k-BLS"/>
-                                        </connections>
                                     </button>
                                     <searchBar contentMode="redraw" placeholder="Enter the tag you want to find!" translatesAutoresizingMaskIntoConstraints="NO" id="as1-dx-5Hg">
                                         <rect key="frame" x="37" y="0.0" width="369" height="56"/>
@@ -163,6 +160,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="guX-0q-btM"/>
                     <connections>
+                        <outlet property="backButton" destination="Qjb-Gg-TIU" id="BfN-Hn-deQ"/>
                         <outlet property="searchBar" destination="as1-dx-5Hg" id="ioV-NK-kTh"/>
                         <outlet property="tableView" destination="ODG-y7-ZhH" id="E5z-gb-1zh"/>
                         <outlet property="tableViewBottomConstraint" destination="jSW-VP-5Ov" id="Z1E-Zv-CDF"/>
@@ -363,9 +361,6 @@ Check your connection</string>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h71-lJ-zQI">
                                         <rect key="frame" x="322" y="8.6666666666666714" width="33" height="33"/>
                                         <state key="normal" image="filter"/>
-                                        <connections>
-                                            <action selector="filteringAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xk5-Qa-4Yf"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -524,7 +519,6 @@ Check your connection</string>
                                     </connections>
                                 </collectionReusableView>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ha7-EV-BfR"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="cfB-Oo-4HE"/>
                                 </connections>
                             </collectionView>
@@ -536,9 +530,6 @@ Check your connection</string>
                                     <constraint firstAttribute="height" constant="60" id="yu4-9H-ZeV"/>
                                 </constraints>
                                 <state key="normal" image="hashtag"/>
-                                <connections>
-                                    <action selector="presentingView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="un1-Q5-TPd"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -563,6 +554,7 @@ Check your connection</string>
                     <navigationItem key="navigationItem" id="UNV-nh-qdb"/>
                     <connections>
                         <outlet property="collectionView" destination="OOO-ep-nXg" id="U9U-Pu-9OT"/>
+                        <outlet property="filterButton" destination="h71-lJ-zQI" id="G0N-Bx-O1l"/>
                         <outlet property="navigationView" destination="fgb-yh-tAm" id="qwt-IN-pbo"/>
                         <outlet property="notConnectView" destination="oM9-bg-3UY" id="LMR-Y4-Anp"/>
                         <outlet property="presentingButton" destination="Ncy-uh-sfu" id="nZq-uQ-P0Q"/>
@@ -570,7 +562,7 @@ Check your connection</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1997.1014492753625" y="118.52678571428571"/>
+            <point key="canvasLocation" x="1087" y="141"/>
         </scene>
         <!--Detail Image View Controller-->
         <scene sceneID="9YV-hE-Qj7">
@@ -725,7 +717,7 @@ Check your connection</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mwb-BH-vfB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2742.0289855072465" y="118.52678571428571"/>
+            <point key="canvasLocation" x="1832" y="141"/>
         </scene>
         <!--CalendarVC-->
         <scene sceneID="u16-GI-6Lu">
@@ -742,27 +734,27 @@ Check your connection</string>
                                 <rect key="frame" x="107" y="322.66666666666669" width="200" height="261.00000000000006"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kSA-Sf-97P">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="16.666666666666668"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="17.666666666666668"/>
                                         <fontDescription key="fontDescription" name="NanumSquareRoundEB" family="NanumSquareRound" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="December" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Mzg-sh-cr1">
-                                        <rect key="frame" x="0.0" y="21.666666666666664" width="200" height="27.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="22.666666666666671" width="200" height="29.333333333333329"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="NanumSquareRoundEB" family="NanumSquareRound" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S3v-3M-N0W" userLabel="LineView">
-                                        <rect key="frame" x="0.0" y="54.333333333333314" width="200" height="1"/>
+                                        <rect key="frame" x="0.0" y="57" width="200" height="1"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="KLv-Pt-Mie"/>
                                         </constraints>
                                     </view>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SER-Eh-flq">
-                                        <rect key="frame" x="0.0" y="60.3333333333333" width="200" height="200.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="63" width="200" height="198"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="5" minimumInteritemSpacing="5" id="e9w-XM-XJI">
                                             <size key="itemSize" width="128" height="128"/>
@@ -779,7 +771,7 @@ Check your connection</string>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xO-11-G0X">
-                                                            <rect key="frame" x="55.000000000000007" y="55.666666666666664" width="18.333333333333336" height="16.666666666666664"/>
+                                                            <rect key="frame" x="55.666666666666657" y="55.333333333333336" width="17" height="17.666666666666664"/>
                                                             <fontDescription key="fontDescription" name="NanumSquareRoundB" family="NanumSquareRound" pointSize="15"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
@@ -962,7 +954,7 @@ Check your connection</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wpf-Z3-jvJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2742" y="930"/>
+            <point key="canvasLocation" x="1832" y="819"/>
         </scene>
         <!--ShowPreVC-->
         <scene sceneID="YP0-YM-elm">
@@ -976,13 +968,13 @@ Check your connection</string>
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6:34" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XT2-rD-svC">
-                                <rect key="frame" x="120.66666666666669" y="102.33333333333331" width="173" height="94"/>
+                                <rect key="frame" x="124.33333333333333" y="99.666666666666686" width="165.66666666666669" height="99.333333333333314"/>
                                 <fontDescription key="fontDescription" name="NanumSquareRoundL" family="NanumSquareRound" pointSize="85"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friday, December 25" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kvn-XL-3Ll">
-                                <rect key="frame" x="111.33333333333333" y="198.33333333333334" width="191.33333333333337" height="22.666666666666657"/>
+                                <rect key="frame" x="114.33333333333333" y="201" width="185.33333333333337" height="22.666666666666657"/>
                                 <fontDescription key="fontDescription" name="NanumSquareRoundR" family="NanumSquareRound" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -997,9 +989,6 @@ Check your connection</string>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NyE-Rs-tcC">
                                         <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
                                         <state key="normal" image="pDownload"/>
-                                        <connections>
-                                            <action selector="downloadAction:" destination="hjq-DW-yC7" eventType="touchUpInside" id="4Us-7o-d1V"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1026,9 +1015,6 @@ Check your connection</string>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cJs-Ma-aI7">
                                         <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
                                         <state key="normal" image="pClose"/>
-                                        <connections>
-                                            <action selector="closeAction:" destination="hjq-DW-yC7" eventType="touchUpInside" id="DXp-QM-139"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1075,12 +1061,27 @@ Check your connection</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jca-iw-BnD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3508.6956521739135" y="118.52678571428571"/>
+            <point key="canvasLocation" x="2586" y="141"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--View Controller-->
+        <scene sceneID="A32-EW-bRK">
+            <objects>
+                <viewController id="ZDA-Kv-UAi" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EFe-8M-RZU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="p5K-M7-dnY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="saD-bO-gnl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-363" y="-360"/>
+        </scene>
+        <!--MainNav-->
         <scene sceneID="CBw-Yb-3pd">
             <objects>
-                <navigationController storyboardIdentifier="MainNav" automaticallyAdjustsScrollViewInsets="NO" id="fZd-Bb-I4I" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainNav" title="MainNav" automaticallyAdjustsScrollViewInsets="NO" id="fZd-Bb-I4I" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="8jh-O8-PuI">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -1095,7 +1096,7 @@ Check your connection</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4CX-XW-B7t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1113" y="110"/>
+            <point key="canvasLocation" x="335" y="141"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
